objects/Flagged_File_Post__c.object
<CustomObject>
    <description>This object contains information about chatter file that requires review based on audit criteria.</description>
    <fields>
        <fullName>Chatter_File_ID__c</fullName>
        <description>Backend field. This will hold the Chatter file record id based on the ContentDocumentId.</description>
        <label>Chatter File ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_File_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be use by the scheduled report for any chatter file whose content matches the blacklisted words.

If value is false, then the file needs review. Otherwise, its already reviewed.</description>
        <inlineHelpText>Please tick if review completed.</inlineHelpText>
        <label>Chatter File Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Reviewer can put the review comments here.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Edge_days__c</fullName>
        <formula>NOW() -   File_uploaded_date__c</formula>
        <label>Edge days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Contains name of detected non compliance file</description>
        <label>File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>File_owner_name__c</fullName>
        <description>It holds the owner name who uploaded the non compliance file.</description>
        <label>File owner name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>File_uploaded_date__c</fullName>
        <description>It holds the date on which file was uploaded in chatter.</description>
        <label>File uploaded date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_To_Chatter_File__c</fullName>
        <description>This formula will be a link to the chatter file record.</description>
        <formula>HYPERLINK(&quot;https://globalfoundries.my.salesforce.com/&quot;&amp;  Chatter_File_ID__c,&quot;LinktoFile&quot;)</formula>
        <label>Link To Chatter File</label>
        <type>Text</type>
    </fields>
    <label>Flagged File Post</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>File_owner_name__c</columns>
        <columns>Link_To_Chatter_File__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Edge_days__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RM_chatter_file_auditors_Flagged_File_Post</fullName>
        <filterScope>Queue</filterScope>
        <label>RM_chatter_file_auditors</label>
        <queue>RM_chatter_file_auditors</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Flagged File Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flagged File Post</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>